--- a/perkenalan.html
+++ b/perkenalan.html
@@ -66,7 +66,7 @@
              Asal sekolah: SMK TELKOM MALANG<br>
              Hobi: menonton,makeup<br>
              Softskill: Self-Control <br>
-             Kesukaan: Luffy </p>
+             Kesukaan: Luffy,zoro </p>
         </div>
         <!--  -->
         </div>
